--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <head>
   <title>Rock paper scissor</title>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./index.css" />
 </head>
 <body>
-  <h1>Rock paper scissor</h1>
+  <div class="gameContainer">
+    <h1>Rock paper scissor</h1>
+    <div class="options">
+      <button name="rock" id="rock" type="button">Rock</button>
+      <button name="paper" id="paper" type="button">Paper</button>
+      <button name="scissor" id="scissor" type="button">Scissor</button>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
